--- a/M2-D4.html
+++ b/M2-D4.html
@@ -192,6 +192,9 @@
 
 
 
+  <footer>
+      <span>Created By <a href="https://www.linkedin.com/in/bokijonov/">Bokijonov Mukhsinjon</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+  </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
