team's number dropdown menu added

--- a/M2-D4.html
+++ b/M2-D4.html
@@ -167,6 +167,18 @@
       <div class="row ">
         <div class="col row justify-content-center">
           <button type="button"id="generator-button" onClick="outputInput(event)" class="btn btn-secondary btn-lg mb-3">Generate Teams</button>
+          <div class="btn-group">
+            <button type="button" id="numbers-button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+              Team's Number
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">1</a>
+              <a class="dropdown-item" href="#">2</a>
+              <a class="dropdown-item" href="#">3</a>
+              <a class="dropdown-item" href="#">4</a>
+              <a class="dropdown-item" href="#">5</a>
+            </div>
+          </div>
           <div class="input-group justify-content-center">
             <input type="text" disabled id="generated-output1" placeholder="">
           </div>
