--- a/M2-D4.html
+++ b/M2-D4.html
@@ -70,7 +70,7 @@
     <section class="bg-dark mb-2 p-3 text-light">
      <div class="row col-sm-12 col-md-10 col-lg-9 col-xl-8">
         <div class="d-inline-block ml-5">
-          <h2>Teams Name</h2>
+          <h2>Draw Name</h2>
         </div>
         <div class="input-group ml-5 mr-5">
           <input type="text" class="form-control" id="draw-name" maxlength="255" placeholder="Draw Name" aria-label="Draw Name" aria-describedby="addon-wrapping" required>
